--- a/src/scss/components/_header.scss
+++ b/src/scss/components/_header.scss
@@ -8,10 +8,18 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
+    @media (max-width: 660px) {
+      flex-direction: column;
+      .header__cart{
+        margin-top: 30px;
+      }
+    }
+
   }
 
   &__logo {
     display: flex;
+
 
     img {
       margin-right: 15px;
