--- a/src/scss/components/_header.scss
+++ b/src/scss/components/_header.scss
@@ -8,11 +8,17 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
+
     @media (max-width: 660px) {
       flex-direction: column;
       .header__cart{
         margin-top: 30px;
       }
+    }
+    @media (max-width: 880px) {
+      display: grid;
+      grid-template-columns: repeat(2, 1fr);
+      grid-template-rows: repeat(2, 1fr);
     }
 
   }
