Сделал полностью корзину. Переместил всю логику получения пицц из сервера в RTK создав новый слайс.

--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -117,7 +117,9 @@ body {
   }
 
   &__clear {
+    background: white;
     display: flex;
+    border: none;
     align-items: center;
     cursor: pointer;
     @include noselect();
